<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dixitawedsharsh.WeddingFragment">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
android:layout_marginTop="20dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="@dimen/activity_vertical_margin"
        >






        <ScrollView

            android:layout_width="fill_parent"

            android:layout_height="fill_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                >


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:background="@drawable/layout"
                >

                <TextView
                    android:id="@+id/textview_11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:textColor="@color/colorText"
                    android:textSize="26sp"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/textview_12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="9dp"
                    android:textColor="@color/colorText"
                    android:layout_below="@+id/textview_11"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/birth_g"/>

                <TextView
                    android:id="@+id/textview_13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="9dp"
                    android:layout_below="@+id/textview_12"
                    android:textColor="@color/colorText"
                    android:textSize="18sp"
                    android:text="@string/birth_b"/>
</RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="260dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:background="@drawable/layout"
                    >

                    <TextView
                        android:id="@+id/textview_21"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:textColor="@color/colorText"
                        android:textSize="26sp"
                        android:textStyle="bold"
                        />
                    <TextView
                        android:id="@+id/textview_22"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="9dp"
                        android:textColor="@color/colorText"
                        android:layout_below="@+id/textview_21"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:text="@string/school_g"/>

                    <TextView
                        android:id="@+id/textview_23"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="9dp"
                        android:layout_below="@+id/textview_22"
                        android:textColor="@color/colorText"
                        android:textSize="18sp"
                        android:text="@string/school_b"/>


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="280dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:background="@drawable/layout"
                    >

                    <TextView
                        android:id="@+id/textview_31"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:textColor="@color/colorText"
                        android:textSize="26sp"
                        android:textStyle="bold"
                        />
                    <TextView
                        android:id="@+id/textview_32"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="9dp"
                        android:textColor="@color/colorText"
                        android:layout_below="@+id/textview_31"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:text="@string/college_g"/>

                    <TextView
                        android:id="@+id/textview_33"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="9dp"
                        android:layout_below="@+id/textview_32"
                        android:textColor="@color/colorText"
                        android:textSize="18sp"
                        android:text="@string/college_b"/>


                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="290dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:background="@drawable/layout"
                    >

                    <TextView
                        android:id="@+id/textview_41"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:textColor="@color/colorText"
                        android:textSize="26sp"
                        android:textStyle="bold"
                        />
                    <TextView
                        android:id="@+id/textview_42"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="9dp"
                        android:textColor="@color/colorText"
                        android:layout_below="@+id/textview_41"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:text="@string/current_g"/>

                    <TextView
                        android:id="@+id/textview_43"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="9dp"
                        android:layout_below="@+id/textview_42"
                        android:textColor="@color/colorText"
                        android:textSize="18sp"
                        android:text="@string/current_b"/>


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="270dp"
                    android:paddingLeft="14dp"
                    android:paddingRight="14dp"
                    android:background="@drawable/layout"
                    >

                    <TextView
                        android:id="@+id/textview_51"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:textColor="@color/colorText"
                        android:textSize="26sp"
                        android:textStyle="bold"
                        />
                    <TextView
                        android:id="@+id/textview_52"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="9dp"
                        android:textColor="@color/colorText"
                        android:layout_below="@+id/textview_51"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:text="@string/interest_g"/>

                    <TextView
                        android:id="@+id/textview_53"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="9dp"
                        android:layout_below="@+id/textview_52"
                        android:textColor="@color/colorText"
                        android:textSize="18sp"
                        android:text="@string/interest_b"/>


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="520dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:background="@drawable/layout"
                    >

                    <TextView
                        android:id="@+id/textview_61"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="55dp"
                        android:textColor="@color/colorText"
                        android:textSize="26sp"
                        android:textStyle="bold"
                        />
                    <TextView
                        android:id="@+id/textview_62"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="9dp"
                        android:textColor="@color/colorText"
                        android:layout_below="@+id/textview_61"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:text="@string/personality_g"/>




                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="520dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:background="@drawable/layout"
                    >

                    <TextView
                        android:id="@+id/textview_71"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="55dp"
                        android:textColor="@color/colorText"
                        android:textSize="26sp"
                        android:textStyle="bold"
                        />


                    <TextView
                        android:id="@+id/textview_73"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="9dp"
                        android:layout_below="@+id/textview_71"
                        android:textColor="@color/colorText"
                        android:textSize="18sp"
                        android:text="@string/personality_b"/>


                </RelativeLayout>
</LinearLayout>
        </ScrollView>

    </RelativeLayout>

    <TextView
        android:id="@+id/upevent"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="12dp"
        android:text="Journey from Beginning"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold" />


</RelativeLayout>
